apps/paperless-ngx/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: paperlessngx-https
  namespace: automation
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`paperlessngx.oglesby.io`)
      kind: Rule
      services:
        - name: paperlessngx
          port: 8096
  tls:
    certResolver: letsencrypt
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: paperlessngx-http
  namespace: automation
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`paperlessngx.oglesby.io`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: paperlessngx
          port: 8096
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: automation
spec:
  redirectScheme:
    scheme: https
    permanent: true
